# editorconfig-core-java

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.xml  pom.xml
src/main/java/org/editorconfig/: EditorConfigCLI.java
src/main/java/org/editorconfig/core/: DefaultParserCallback.java  EditorConfig.java  ParserCallback.java  package-info.java
src/main/java/org/editorconfig/core/provider/: FileStreamProvider.java  StreamProvider.java
src/org/editorconfig/: EditorConfigCLI.java
src/org/editorconfig/core/: EditorConfig.java  EditorConfigException.java  VersionException.java
